# django_render_demo

./: pyproject.toml  render.yaml
core/: settings.py  urls.py
notes/: models.py
notes/api/: serializers.py  urls.py  views.py
notes/migrations/: 0001_initial.py
