[tool.poetry]
name = "notes-app"
version = "0.1.0"
description = ""
authors = ["bjamyl <alhassanjamil0@gmail.com>"]
readme = "README.md"
packages = [{include = "notes_app"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.4"
djangorestframework = "^3.14.0"
django-cors-headers = "^3.13.0"
dj-database-url = "^1.2.0"
psycopg2-binary = "^2.9.5"
whitenoise = {extras = ["brotli"], version = "^6.3.0"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
